[grid] Replace Guava list,set,map and sorted set with Java equivalent